# Filigram

./: .clang-uml  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile
Filigram/: CMakeLists.txt  Filigram.cpp  Filigram.h  main.cpp  server.cpp
Filigram/calc/: Calc.cpp  Calc.h
Filigram/include/: MainWindow.h  ServerClient.h  fileDialog.h
Filigram/include/data/: DatabaseManager.h  PasswordManager.hpp  PlotData.hpp  SQLModels.hpp  User.h
Filigram/include/shaders/: ShaderManager.h  Shaders.h
Filigram/server/include/: ChatServer.h
Filigram/server/src/: ChatServer.cpp
Filigram/src/: MainWindow.cpp  ServerClient.cpp
Filigram/src/data/: DatabaseManager.cpp
Filigram/src/shaders/: Shaders.cpp
cmake/: wsl-toolchain.cmake
docs/doxygen/html/: _chat_server_8cpp.html  _chat_server_8cpp__incl.map  _chat_server_8cpp__incl.md5  _chat_server_8h.html  _chat_server_8h.js  _chat_server_8h__dep__incl.map  _chat_server_8h__dep__incl.md5  _chat_server_8h__incl.map  _chat_server_8h__incl.md5  _chat_server_8h_source.html  _database_manager_8cpp.html  _database_manager_8cpp.js  _database_manager_8cpp__incl.map  _database_manager_8cpp__incl.md5  _database_manager_8h.html  _database_manager_8h__dep__incl.map  _database_manager_8h__dep__incl.md5  _database_manager_8h__incl.map  _database_manager_8h__incl.md5  _database_manager_8h_source.html  _password_manager_8hpp.html  _password_manager_8hpp.js  _password_manager_8hpp__dep__incl.map  _password_manager_8hpp__dep__incl.md5  _password_manager_8hpp__incl.map  _password_manager_8hpp__incl.md5  _password_manager_8hpp_source.html  _plot_data_8hpp.html  _plot_data_8hpp.js  _plot_data_8hpp__incl.map  _plot_data_8hpp__incl.md5  _plot_data_8hpp_source.html  _s_q_l_models_8hpp.html  _s_q_l_models_8hpp.js  _s_q_l_models_8hpp__dep__incl.map  _s_q_l_models_8hpp__dep__incl.md5  _s_q_l_models_8hpp__incl.map  _s_q_l_models_8hpp__incl.md5  _s_q_l_models_8hpp_source.html  annotated.html  (+137 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_2.js  classes_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_3.js  files_4.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+25 more)
docs/doxygen/latex/: _chat_server_8cpp.tex  _chat_server_8cpp__incl.md5  _chat_server_8h.tex  _chat_server_8h__dep__incl.md5  _chat_server_8h__incl.md5  _chat_server_8h_source.tex  _database_manager_8cpp.tex  _database_manager_8cpp__incl.md5  _database_manager_8h.tex  _database_manager_8h__dep__incl.md5  _database_manager_8h__incl.md5  _database_manager_8h_source.tex  _password_manager_8hpp.tex  _password_manager_8hpp__dep__incl.md5  _password_manager_8hpp__incl.md5  _password_manager_8hpp_source.tex  _plot_data_8hpp.tex  _plot_data_8hpp__incl.md5  _plot_data_8hpp_source.tex  _s_q_l_models_8hpp.tex  _s_q_l_models_8hpp__dep__incl.md5  _s_q_l_models_8hpp__incl.md5  _s_q_l_models_8hpp_source.tex  annotated.tex  class_chat.tex  class_chat__inherit__graph.md5  class_chat_member.tex  class_chat_member__coll__graph.md5  class_chat_server.tex  class_chat_server__coll__graph.md5  class_database_manager.tex  class_media.tex  class_media__coll__graph.md5  class_message.tex  class_message__coll__graph.md5  class_notification.tex  class_notification__inherit__graph.md5  class_password_manager.tex  class_plot_data.tex  class_reaction.tex  (+24 more)
